fleet/lib/opensearch-logging/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
    cert-manager.io/cluster-issuer: letsencrypt
  name: logging-os-api
spec:
  ingressClassName: nginx
  rules:
  - host: logging.dev.lsst.org
    http:
      paths:
      - backend:
          service:
            name: logging-coordinators
            port:
              number: 9200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - logging.dev.lsst.org
    secretName: tls-logging-ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: logging-os-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: logging.dev.lsst.org
    http:
      paths:
      - backend:
          service:
            name: logging-dashboards
            port:
              number: 5601
        path: /dashboard(/|$)(.*)
        pathType: Prefix
  tls:
  - hosts:
    - logging.dev.lsst.org
    secretName: tls-logging-ingress
